# .devbt

./: .env  LICENSE  README.md  dbt_project.yml  justfile  packages.yml  profiles.yml  pyproject.toml
src/macros/: generate_schema_name.sql
src/models/demo/: demo_compile_configs.sql
src/models/test_tables/: devbt_test_table.sql  properties.yml
src/tests/: test_devbt_test_table.sql
